--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,6 @@
     "singleQuote": true,
     "bracketSpacing": true,
     "trailingComma": "all",
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "semi": true
 }
