--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "express-validator": "^6.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
