--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-image-gallery": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
