--- a/backend/package.json
+++ b/backend/package.json
@@ -27,8 +27,12 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.0",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.7.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
