--- a/package.json
+++ b/package.json
@@ -42,6 +42,16 @@
         ]
     },
     "devDependencies": {
+        "husky": "^4.3.8",
+        "lint-staged": "^10.5.4",
         "prettier": "2.2.1"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,css,md}": "prettier --write"
     }
 }
