--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
         ]
     },
     "devDependencies": {
+        "eslint": "^7.21.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
         "husky": "^4.3.8",
         "lint-staged": "^10.5.4",
         "prettier": "2.2.1"
