--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
         }
     },
     "lint-staged": {
-        "*.{js,jsx,css,md}": "prettier --write"
+        "*.{js,jsx,css,md}": [
+            "eslint --fix"
+        ]
     }
 }
