--- a/package.json
+++ b/package.json
@@ -48,7 +48,12 @@
         "eslint-plugin-react": "^7.22.0",
         "husky": "^4.3.8",
         "lint-staged": "^10.5.4",
-        "prettier": "2.2.1"
+        "prettier": "2.2.1",
+        "stylelint": "^13.12.0",
+        "stylelint-config-prettier": "^8.0.2",
+        "stylelint-config-recommended": "^4.0.0",
+        "stylelint-order": "^4.1.0",
+        "stylelint-scss": "^3.19.0"
     },
     "husky": {
         "hooks": {
@@ -56,8 +61,12 @@
         }
     },
     "lint-staged": {
-        "*.{js,jsx,css,md}": [
-            "eslint --fix"
+        "!(_*).scss": [
+            "prettier --write",
+            "stylelint --fix --color --config ./.stylelintrc.json"
+        ],
+        "*.{js,jsx,md}": [
+            "eslint --fix --color"
         ]
     }
 }
