--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
     "parserOptions": {
         "ecmaVersion": 12,
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
     "env": {
         "browser": true,
@@ -10,6 +13,7 @@
         "jest": true
     },
     "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+    "plugins": ["react"],
     "rules": {
         "prettier/prettier": [
             "error",
