feat: make possible to build project with no-unused-vars warn
Changes:
- make eslint config for lint-staged
- add no-unused-vars rule make warn in base eslint config
- add no-unused-vars rule make error in lint-staged eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
             {
                 "endOfLine": "auto"
             }
-        ]
+        ],
+        "no-unused-vars": "warn"
     },
     "settings": {
         "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
