--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "storybook": "start-storybook -p 6006 -s public",
+        "build-storybook": "build-storybook -s public"
     },
     "eslintConfig": {
         "extends": [
@@ -44,6 +46,12 @@
         ]
     },
     "devDependencies": {
+        "@storybook/addon-actions": "^6.1.21",
+        "@storybook/addon-essentials": "^6.1.21",
+        "@storybook/addon-links": "^6.1.21",
+        "@storybook/node-logger": "^6.1.21",
+        "@storybook/preset-create-react-app": "^3.1.7",
+        "@storybook/react": "^6.1.21",
         "eslint": "^7.21.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-prettier": "^3.3.1",
