--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-full-screen": "^1.0.1",
         "react-image-gallery": "^1.0.9",
         "react-leaflet": "^3.1.0",
         "react-router-dom": "^5.2.0",
