feat: russian layer add-fix

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@mapbox/mapbox-gl-language": "^0.10.1",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.8.1",
         "leaflet": "^1.7.1",
+        "mapbox-gl": "^2.1.1",
         "moment": "^2.29.1",
         "node-sass": "^5.0.0",
         "prop-types": "^15.7.2",
@@ -15,6 +17,8 @@
         "react-full-screen": "^1.0.1",
         "react-image-gallery": "^1.0.9",
         "react-leaflet": "^3.1.0",
+        "react-mapbox-gl": "^5.1.1",
+        "react-mapbox-gl-language": "^1.0.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "redux": "^4.0.5",
